--- a/Work Sample - People Analytics.ipynb
+++ b/Work Sample - People Analytics.ipynb
@@ -11,6 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Name: Kaitlyn Shi\n",
+    "\n",
+    "Date: August 18, 2024"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Data Dictionary\n",
     "Age: The age of the employee. (Numerical)\n",
     "\n",
